--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div class="tab" onclick="openTab(event, 'grid2')">Zelda Link to the Past</div>
 	</div>
 	
-	<div id="grid1" class="tabcontent">
+	<div id="grid1" class="tabcontent" style="display: block;">
 		<div class="grid">
 			<img src="sm/draygon.png" onclick="toggleColor(this)">
 			<img src="sm/kraid.png" onclick="toggleColor(this)">
