--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
 			.tab {
 				font-size: 16px;
 			}
+
+            .tabcontent {
+            display: none;
+            padding: 20px;
+            width: 100%;
 		}
 	</style>
 </head>
