--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             display: none;
             padding: 20px;
             width: 100%;
+            max-width: 100%;
 		}
 	</style>
 </head>
