--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			padding: 0;
 			font-family: Arial, sans-serif;
             font-family: 'Press Start 2P', sans-serif;
+            width: 100%;
 		}
 		
 		.tabs {
